force-app/main/default/objects/Lead/fields/Activity_Date_2__c.field-meta.xml
<CustomField>
    <fullName>Activity_Date_2__c</fullName>
    <label>ABM Email 2</label>
    <type>Date</type>
</CustomField>