force-app/main/default/objects/Lead/fields/Clear_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Clear_Tracking__c</fullName>
    <label>Clear Tracking</label>
    <type>DateTime</type>
</CustomField>