force-app/main/default/objects/Lead/fields/Last_Email__c.field-meta.xml
<CustomField>
    <fullName>Last_Email__c</fullName>
    <label>Last Email</label>
    <type>Date</type>
</CustomField>