force-app/main/default/objects/Lead/fields/X10th_Call_Sent__c.field-meta.xml
<CustomField>
    <fullName>X10th_Call_Sent__c</fullName>
    <label>10th Call Sent</label>
    <type>DateTime</type>
</CustomField>