force-app/main/default/objects/Lead/fields/X1st_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>X1st_Email_Sent__c</fullName>
    <label>1st Email Sent</label>
    <type>DateTime</type>
</CustomField>