force-app/main/default/objects/Lead/fields/X2nd_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Email_Sent__c</fullName>
    <label>2nd Email Sent</label>
    <type>DateTime</type>
</CustomField>