force-app/main/default/objects/Lead/fields/X4th_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>X4th_Email_Sent__c</fullName>
    <label>4th Email Sent</label>
    <type>DateTime</type>
</CustomField>