force-app/main/default/objects/Lead/fields/X5th_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>X5th_Email_Sent__c</fullName>
    <label>5th Email Sent</label>
    <type>DateTime</type>
</CustomField>