force-app/main/default/objects/Lead/fields/X6th_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>X6th_Email_Sent__c</fullName>
    <label>6th Email Sent</label>
    <type>DateTime</type>
</CustomField>