force-app/main/default/objects/Lead/fields/X8th_Call_Sent__c.field-meta.xml
<CustomField>
    <fullName>X8th_Call_Sent__c</fullName>
    <label>8th Call Sent</label>
    <type>DateTime</type>
</CustomField>